--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /ci-hmvc/
+RewriteBase /cms/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
